# messenger_client

./: CMakeLists.txt  authservice.cpp  authservice.h  chatclient.cpp  chatclient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
